--- a/html&css-cssflex&alignment-5thcourse/index1.html
+++ b/html&css-cssflex&alignment-5thcourse/index1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- we use the link, to connect our css to this html -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style1.css">
 </head>
 <body>
     <h1>CSS Flexbox and Alignment Properties </h1>
